# lambda-forge-textual

./: .gitignore  README.md  api_gateway.py  app.py  logs.py  main.py  pyproject.toml  pyvenv.cfg  server.py  styles.tcss  table.py
.old/: README.md  server.py  triggers.py
forge-tui/: __init__.py
forge-tui/api/: forge.py
forge-tui/ui/widgets/: __init__.py  logs.py
forge_tui/api/: __init__.py  forge.py
forge_tui/ui/: styles.css  tui.py
forge_tui/ui/screens/: index.py  loading.py
forge_tui/ui/widgets/: header.py  logs.py  server.py  text_area_theme.py
forge_tui/ui/widgets/triggers/: _base.py  _result_window.py  _trigger_submit.py  api_gateway.py  event_bridge.py  s3.py  sns.py  sqs.py  triggers.py
old/: main.py  styles.tcss
